kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: origoss-task-service
  labels:
    prometheus: main
spec:
  type: ClusterIP
  selector:
    app: origoss-task
  ports:
  - name: http
    port: 80
    targetPort: http
  - name: metrics
    port: 8080
    targetPort: metrics
